# reproducible-nlp

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  train.py  train_cv.py  train_holdout.py
.github/workflows/: clm.yaml  tests.yaml
src/: __init__.py
src/conf/: config.py  config.yaml
src/config/: config.py  regex.py
src/features/: __init__.py  labelencoder.py  preprocessing.py  sampler.py
src/modeling/: __init__.py  inference.py  trainer.py
src/utils/: __init__.py  git.py  io.py
tasks/: download_data.sh  setup.sh
tests/test_features/: __init__.py  test_labelencoder.py  test_preprocessing.py  test_sampler.py
tests/test_modeling/: __init__.py  test_inference.py
