[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"
nltk = "^3.7"
hydra-core = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
flake8 = "*"
flake8-comprehensions = "*"
black = "*"
isort = "*"
mypy = "*"
pydocstyle = "*"
pydantic = "*"
pre-commit = "*"
ipykernel = "^6.17.1"

[tool.poetry.group.ci.dependencies]
pytest = "^6.0.0"
flake8 = "*"
flake8-comprehensions = "*"
black = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pydocstyle]
convention = "numpy"

[tool.black]
line_length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = "True"
check_untyped_defs = "True"
warn_no_return = "True"
warn_return_any = "True"
